--- a/index.html
+++ b/index.html
@@ -4,18 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Poppy Final Project</title>
-    <link rel="stylesheet" href="src/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <div class="container">
-      <h1>hello world!</h1>
-      <a href="" class="btn btn-primary">Click me!</a>
+    <div class="container"></div>
+      <a
+        href="http://www.shecodes.io"
+        class="btn btn-success"
+        class="geoloc-btn"
+        >📍</a
+      >
     </div>
     <script src="src/app.js"></script>
   </body>
